--- a/.gitattributes
+++ b/.gitattributes
@@ -35,7 +35,6 @@
 *.shadervariants unityyaml
 *.preset unityyaml
 *.asmdef -text diff
-
 # Unity Binary Assets
 *.cubemap lfs
 *.unitypackage lfs
@@ -43,7 +42,6 @@
 *-[Tt]errain.asset -unityyaml lfs
 # Note: Unity navmesh assets must have "-NavMesh" suffix.
 *-[Nn]av[Mm]esh.asset -unityyaml lfs
-
 # Image
 *.jpg lfs
 *.jpeg lfs
@@ -71,7 +69,6 @@
 *.psd lfs
 *.afphoto lfs
 *.afdesign lfs
-
 # Audio
 *.mp3 lfs
 *.ogg lfs
@@ -82,7 +79,6 @@
 *.it lfs
 *.s3m lfs
 *.xm lfs
-
 # Video
 *.mov lfs
 *.avi lfs
@@ -93,7 +89,6 @@
 *.flv lfs
 *.ogv lfs
 *.wmv lfs
-
 # 3D
 *.fbx lfs
 *.obj lfs
@@ -112,17 +107,16 @@
 *.3dm lfs
 *.bin lfs
 *.glb lfs
-
 # Executables
 *.exe lfs
 *.dll lfs
 *.so lfs
 *.pdb lfs
 *.mdb lfs
-
 # Packaging
 *.zip lfs
 *.7z lfs
 *.gz lfs
 *.rar lfs
 *.tar lfs
+*.ai filter=lfs diff=lfs merge=lfs -text
